fixed spacing for questions

--- a/react-app/src/components/ProfileForm/ProfileForm.css
+++ b/react-app/src/components/ProfileForm/ProfileForm.css
@@ -8,7 +8,7 @@
   flex-direction: column;
 
 }
-
+/*
 input {
   border: 0;
   border-bottom: 2px solid #ccc;
@@ -18,7 +18,18 @@ input {
   outline: 0;
   padding: 0.25em 0.5em;
   width: 500px;
-  font-family: "Poppins",sans-serif;
+  background: transparent;
+} */
+
+.profile-input {
+  border: 0;
+  border-bottom: 2px solid #ccc;
+  box-sizing: border-box;
+  display: block;
+  margin-bottom: 2em;
+  outline: 0;
+  padding: 0.25em 0.5em;
+  width: 500px;
   background: transparent;
 }
 
